<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="btn_login">SIGN IN</string>
    <string name="tv_signup">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="btn_signup">SIGN UP</string>
    <string name="signup_error_message">Please make sure you enter a username, password and email address</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure your username and password are correct! </string>
    <string name="login_error_title">Oops!</string>
    <string name="menu_logout_label">LogOut</string>
    <string name="tv_forgetPassword">Forget your password?</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="tv_enter_email_title">Please enter your email</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friend">EditFriendActivity</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">Oops!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem
        accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">The seleted video must be less than 10MB.</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="action_send">Send</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file</string>
    <string name="error_selecting_file_title">We are sorry!</string>
    <string name="success_message">Message Sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again!</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="title_activity_view_image_acitivity">Ribbit</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="tv_subtitle">Self Destructing Message App</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="content_btn_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message icon</string>
    <string name="content_desc_user_avatar">User avatar</string>
    <string name="push_message">You have a new Ribbit message form %s</string>

</resources>
