<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bojie.ribbit.ui.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_subtitle"
        style="@style/AuthSubTitle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">


        <EditText
            android:id="@+id/et_username"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_password"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:layout_below="@+id/editTextLayout"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/tv_signup"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tv_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/tv_forgetPassword"
        android:textColor="@android:color/white" />


</RelativeLayout>
